fix(HomeSection): change heading text whitespace

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,6 @@
   font-weight: 700;
 }
 
-.text-pre {
-  white-space: pre;
+.text-pre-wrap {
+  white-space: pre-wrap;
 }
